expr/internal/parser/y.output

state 0
	$accept: .program $end 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	exprs  goto 2
	expr  goto 3
	binary_expr  goto 4
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  exprs.    (1)
	exprs:  exprs.';' expr 

	';'  shift 17
	.  reduce 1 (src line 39)


state 3
	exprs:  expr.    (3)

	.  reduce 3 (src line 42)


state 4
	expr:  binary_expr.    (4)
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	kIN  shift 29
	OR  shift 19
	AND  shift 18
	'<'  shift 20
	LE  shift 21
	'>'  shift 22
	GE  shift 23
	EQ  shift 24
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 4 (src line 44)


state 5
	binary_expr:  unary_expr.    (5)

	.  reduce 5 (src line 46)


state 6
	unary_expr:  '!'.term 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'('  shift 13
	'['  shift 16
	.  error

	term  goto 30
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 7
	unary_expr:  term.    (19)
	invocation:  term.'(' opt_params ')' 

	'('  shift 31
	.  reduce 19 (src line 61)


state 8
	term:  number.    (20)

	.  reduce 20 (src line 63)


state 9
	term:  STRING.    (21)

	.  reduce 21 (src line 64)


state 10
	term:  ID.    (22)

	.  reduce 22 (src line 65)


state 11
	term:  invocation.    (23)

	.  reduce 23 (src line 66)


state 12
	term:  array_literal.    (24)

	.  reduce 24 (src line 67)


state 13
	term:  '('.expr ')' 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	expr  goto 32
	binary_expr  goto 4
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 14
	number:  '-'.NUMBER 

	NUMBER  shift 33
	.  error


state 15
	number:  NUMBER.    (27)

	.  reduce 27 (src line 71)


state 16
	array_literal:  '['.array_elems ']' 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	expr  goto 35
	binary_expr  goto 4
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12
	array_elems  goto 34

state 17
	exprs:  exprs ';'.expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	expr  goto 36
	binary_expr  goto 4
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 18
	binary_expr:  binary_expr AND.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 37
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 19
	binary_expr:  binary_expr OR.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 38
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 20
	binary_expr:  binary_expr '<'.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 39
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 21
	binary_expr:  binary_expr LE.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 40
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 22
	binary_expr:  binary_expr '>'.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 41
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 23
	binary_expr:  binary_expr GE.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 42
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 24
	binary_expr:  binary_expr EQ.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 43
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 25
	binary_expr:  binary_expr '+'.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 44
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 26
	binary_expr:  binary_expr '-'.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 45
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 27
	binary_expr:  binary_expr '*'.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 46
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 28
	binary_expr:  binary_expr '/'.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 47
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 29
	binary_expr:  binary_expr kIN.binary_expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	binary_expr  goto 48
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 30
	unary_expr:  '!' term.    (18)
	invocation:  term.'(' opt_params ')' 

	'('  shift 31
	.  reduce 18 (src line 60)


state 31
	invocation:  term '('.opt_params ')' 
	opt_params: .    (30)

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  reduce 30 (src line 76)

	opt_params  goto 49
	params  goto 50
	expr  goto 51
	binary_expr  goto 4
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 32
	term:  '(' expr.')' 

	')'  shift 52
	.  error


state 33
	number:  '-' NUMBER.    (26)

	.  reduce 26 (src line 70)


state 34
	array_literal:  '[' array_elems.']' 
	array_elems:  array_elems.',' expr 

	','  shift 54
	']'  shift 53
	.  error


state 35
	array_elems:  expr.    (35)

	.  reduce 35 (src line 84)


state 36
	exprs:  exprs ';' expr.    (2)

	.  reduce 2 (src line 41)


state 37
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr AND binary_expr.    (6)
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	kIN  shift 29
	'<'  shift 20
	LE  shift 21
	'>'  shift 22
	GE  shift 23
	EQ  shift 24
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 6 (src line 47)


state 38
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr OR binary_expr.    (7)
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	kIN  shift 29
	AND  shift 18
	'<'  shift 20
	LE  shift 21
	'>'  shift 22
	GE  shift 23
	EQ  shift 24
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 7 (src line 48)


state 39
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr '<' binary_expr.    (8)
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	'<'  error
	LE  error
	'>'  error
	GE  error
	EQ  error
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 8 (src line 49)


state 40
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr LE binary_expr.    (9)
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	'<'  error
	LE  error
	'>'  error
	GE  error
	EQ  error
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 9 (src line 50)


state 41
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr '>' binary_expr.    (10)
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	'<'  error
	LE  error
	'>'  error
	GE  error
	EQ  error
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 10 (src line 51)


state 42
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr GE binary_expr.    (11)
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	'<'  error
	LE  error
	'>'  error
	GE  error
	EQ  error
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 11 (src line 52)


state 43
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr EQ binary_expr.    (12)
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	'<'  error
	LE  error
	'>'  error
	GE  error
	EQ  error
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 12 (src line 53)


state 44
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr '+' binary_expr.    (13)
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	'*'  shift 27
	'/'  shift 28
	.  reduce 13 (src line 54)


state 45
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr '-' binary_expr.    (14)
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	'*'  shift 27
	'/'  shift 28
	.  reduce 14 (src line 55)


state 46
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr '*' binary_expr.    (15)
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 

	.  reduce 15 (src line 56)


state 47
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr '/' binary_expr.    (16)
	binary_expr:  binary_expr.kIN binary_expr 

	.  reduce 16 (src line 57)


state 48
	binary_expr:  binary_expr.AND binary_expr 
	binary_expr:  binary_expr.OR binary_expr 
	binary_expr:  binary_expr.'<' binary_expr 
	binary_expr:  binary_expr.LE binary_expr 
	binary_expr:  binary_expr.'>' binary_expr 
	binary_expr:  binary_expr.GE binary_expr 
	binary_expr:  binary_expr.EQ binary_expr 
	binary_expr:  binary_expr.'+' binary_expr 
	binary_expr:  binary_expr.'-' binary_expr 
	binary_expr:  binary_expr.'*' binary_expr 
	binary_expr:  binary_expr.'/' binary_expr 
	binary_expr:  binary_expr.kIN binary_expr 
	binary_expr:  binary_expr kIN binary_expr.    (17)

	kIN  error
	'<'  shift 20
	LE  shift 21
	'>'  shift 22
	GE  shift 23
	EQ  shift 24
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	.  reduce 17 (src line 58)


state 49
	invocation:  term '(' opt_params.')' 

	')'  shift 55
	.  error


state 50
	opt_params:  params.    (29)
	params:  params.',' expr 

	','  shift 56
	.  reduce 29 (src line 75)


state 51
	params:  expr.    (32)

	.  reduce 32 (src line 79)


state 52
	term:  '(' expr ')'.    (25)

	.  reduce 25 (src line 68)


state 53
	array_literal:  '[' array_elems ']'.    (33)

	.  reduce 33 (src line 81)


state 54
	array_elems:  array_elems ','.expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	expr  goto 57
	binary_expr  goto 4
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 55
	invocation:  term '(' opt_params ')'.    (28)

	.  reduce 28 (src line 73)


state 56
	params:  params ','.expr 

	ID  shift 10
	NUMBER  shift 15
	STRING  shift 9
	'-'  shift 14
	'!'  shift 6
	'('  shift 13
	'['  shift 16
	.  error

	expr  goto 58
	binary_expr  goto 4
	unary_expr  goto 5
	term  goto 7
	invocation  goto 11
	number  goto 8
	array_literal  goto 12

state 57
	array_elems:  array_elems ',' expr.    (34)

	.  reduce 34 (src line 83)


state 58
	params:  params ',' expr.    (31)

	.  reduce 31 (src line 78)


26 terminals, 13 nonterminals
36 grammar rules, 59/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 132/120000
46 extra closures
214 shift entries, 27 exceptions
31 goto entries
99 entries saved by goto default
Optimizer space used: output 100/120000
100 table entries, 0 zero
maximum spread: 26, maximum offset: 56
